[gd_scene load_steps=3 format=3 uid="uid://bkby5c6cvoubs"]

[ext_resource type="Texture2D" uid="uid://0tf5hgru5rbl" path="res://Assets/password.jpg" id="1_momlf"]
[ext_resource type="Script" path="res://Scripts/password_script.gd" id="1_p5pqn"]

[node name="open_door_dyson_puzzle" type="Node2D"]
script = ExtResource("1_p5pqn")

[node name="Password" type="Sprite2D" parent="."]
position = Vector2(992, 592)
scale = Vector2(4, 4)
texture = ExtResource("1_momlf")

[node name="Button" type="Button" parent="."]
offset_left = 1104.0
offset_top = 472.0
offset_right = 1112.0
offset_bottom = 480.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "1"

[node name="Button2" type="Button" parent="."]
offset_left = 1227.0
offset_top = 472.0
offset_right = 1245.0
offset_bottom = 503.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "2"

[node name="Button3" type="Button" parent="."]
offset_left = 1360.0
offset_top = 472.0
offset_right = 1378.0
offset_bottom = 503.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "3"

[node name="Button4" type="Button" parent="."]
offset_left = 1104.0
offset_top = 600.0
offset_right = 1122.0
offset_bottom = 631.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "4"

[node name="Button5" type="Button" parent="."]
offset_left = 1232.0
offset_top = 592.0
offset_right = 1250.0
offset_bottom = 623.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "5"

[node name="Button6" type="Button" parent="."]
offset_left = 1355.0
offset_top = 592.0
offset_right = 1373.0
offset_bottom = 623.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "6"

[node name="Button7" type="Button" parent="."]
offset_left = 1104.0
offset_top = 717.0
offset_right = 1122.0
offset_bottom = 748.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "7"

[node name="Button8" type="Button" parent="."]
offset_left = 1232.0
offset_top = 717.0
offset_right = 1250.0
offset_bottom = 748.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "8"

[node name="Button9" type="Button" parent="."]
offset_left = 1360.0
offset_top = 720.0
offset_right = 1378.0
offset_bottom = 751.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "9"

[node name="Button10" type="Button" parent="."]
offset_left = 1360.0
offset_top = 312.0
offset_right = 1378.0
offset_bottom = 343.0
scale = Vector2(6.84617, 3.78158)
theme_override_font_sizes/font_size = 0
text = "X"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_9_pressed"]
